force-app/main/default/objects/Land__c/Land__c.object-meta.xml
<CustomObject>
    <label>Land</label>
    <nameField>
        <label>Land Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>