force-app/main/default/objects/Land__c/fields/ARA_s__c.field-meta.xml
<CustomField>
    <fullName>ARA_s__c</fullName>
    <label>ARA’s</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>