force-app/main/default/objects/Land__c/fields/Freehold_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Freehold_Landlord__c</fullName>
    <label>Freehold Landlord</label>
    <length>255</length>
    <type>Text</type>
</CustomField>