force-app/main/default/objects/Land__c/fields/Land_Status__c.field-meta.xml
<CustomField>
    <fullName>Land_Status__c</fullName>
    <label>Land Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Land</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>