force-app/main/default/objects/Land__c/fields/Leasehold_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Leasehold_Landlord__c</fullName>
    <label>Leasehold Landlord</label>
    <length>255</length>
    <type>Text</type>
</CustomField>