force-app/main/default/objects/Land__c/fields/Purchase_Price_Per_ARA__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_Per_ARA__c</fullName>
    <label>Purchase Price (Per ARA)</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>