force-app/main/default/objects/Land__c/fields/Sale_Price_Per_ARA__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price_Per_ARA__c</fullName>
    <label>Sale Price (Per ARA)</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>