force-app/main/default/objects/Land__c/fields/Zoning__c.field-meta.xml
<CustomField>
    <fullName>Zoning__c</fullName>
    <label>Zoning:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>